--- a/website/2columnpage/css/custum.css
+++ b/website/2columnpage/css/custum.css
@@ -154,7 +154,7 @@
 
 .top-image{
     margin: 0;
-    background: url("../img/img-top.jpg") center no-repeat ;
+    background: url("imgp.jpg") center no-repeat ;
     background-size: cover;
     max-width: 100%;
 }
