--- a/website/CorporateSite/bootstrap-5.3.0-alpha3-dist/css/custom02.css
+++ b/website/CorporateSite/bootstrap-5.3.0-alpha3-dist/css/custom02.css
@@ -2,22 +2,31 @@
 /* コーポレート */
 
 .first-section{
-  background: url("../../images/image01.jpg") center no-repeat;
-  background-size: cover;
-  padding: 10rem 2rem;
+  /*background: url("../../images/image14.png");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;*/
+  padding: 2rem 0;
 }
 
-.display-1{
-  font-size: calc(1rem + 10vw) !important;
+.firstsection-left-img{
+  background: url("../../images/image14.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: cover;
 }
+
+/*.display-1{
+  font-size: calc(1rem + 7vw) !important;
+}*/
 
 .section-padding{
   padding: 2rem;
 }
 
 .second-section-text{
-  font-weight: 100;
-  font-size: calc(1rem + 2vw);
+  font-weight: 400;
+  font-size: calc(1rem + 1vw);
 }
 
 .third-section-img{
@@ -44,4 +53,43 @@
 .border-image-logo {
   border-left: 4rem solid;
   border-image: url('../../images/image05.png') 1 700 stretch;
+}
+
+.img-custom{
+  width: 100%;
+  height: 100%;
+}
+
+.second-bg{
+  background: url("../../images/image11.png");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+
+.section-padding-plus{
+  padding: 2rem;
+}
+
+.border-image-news {
+  border-left: 4rem solid;
+  border-image: url('../../images/image12.png') 1 700 stretch;
+}
+
+.border-image-top {
+  border-top: 3rem solid;
+  border-bottom: 3rem solid;
+  border-image: url('../../images/image14.png') 139 stretch;
+  padding: 2rem 0;
+}
+
+.news-border {
+  border-top: 3rem solid;
+  border-bottom: 3rem solid;
+  border-image: url('../../images/image14.png') 90 stretch;
+  padding: 2rem 0;
+}
+
+.top-carousel-margin{
+  margin: 2rem 0rem;
 }
