--- a/website/CorporateSite/bootstrap-5.3.0-alpha3-dist/css/custom03.css
+++ b/website/CorporateSite/bootstrap-5.3.0-alpha3-dist/css/custom03.css
@@ -53,18 +53,17 @@
 
 /* 保育園 */
 
-.wf-nicomoji {
-  font-family: "Nico Moji";
-}
-
 .border-image-logo {
   border-left: 4rem solid;
   border-image: url('../../images/image05.png') 1 700 stretch;
 }
 
 .img-custom{
+  width: 30%;
+}
+
+.thumbnail-img-custom{
   width: 100%;
-  height: 100%;
 }
 
 .second-bg{
