--- a/website/portfoliosite/bootstrap-5.3.0-alpha3-dist/css/custom.css
+++ b/website/portfoliosite/bootstrap-5.3.0-alpha3-dist/css/custom.css
@@ -1,6 +1,10 @@
 
 /* コーポレート */
 
+.row {
+  --bs-gutter-x: 0rem;
+}
+
 .first-section{
   background: url("../../images/image01.jpg") center no-repeat;
   background-size: cover;
@@ -33,4 +37,13 @@
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover;
+}
+
+.img-col{
+  width: 70%;
+}
+
+.img-map{
+  width: 100%;
+  height: 350px;
 }
